# databricks-mcp-server

./: .gitignore  LICENSE  README.md  config.env.example  pyproject.toml
deploy/docker/: Dockerfile  docker-compose.yml
docs/: README.md
docs/examples/: natural_language_demo.py
docs/guides/: ASYNCIO.md  DOCKER.md  PROJECT_STRUCTURE.md
src/databricks_mcp/: __init__.py
src/databricks_mcp/cli/: __init__.py  main.py
src/databricks_mcp/core/: __init__.py  config.py  server.py  server_fastmcp.py
src/databricks_mcp/core/tools/: __init__.py  catalog_tools.py  natural_language_tools.py  query_tools.py
src/databricks_mcp/core/utils/: __init__.py  databricks_client.py  natural_language.py  query_validator.py
src/databricks_mcp/servers/: __init__.py  main.py  main_fastmcp.py
src/tests/: __init__.py  test_connection.py  test_simple_connection.py
tools/scripts/: list_tools.py  run_docker_mcp.sh  test_connection.py  test_docker_asyncio.py
